--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,61 @@ a, a:hover {text-decoration: none;}
 .right {float: right;}
 
 
+#header {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  right:0;
+  width: 100%;
+  padding: 20px 0;
+}
+
+
+.logo {
+  float: left;
+}
+
+
+.nav {
+  float: right;
+  padding-top: 5px;
+}
+
+.nav li {
+  float: left;
+  margin-right: 40px;
+}
+
+.nav li:last-child {margin-right: 0;}
+.nav a {
+  text-transform: uppercase;
+  font: 14px Arial, sans-serif;
+  color: #fff;
+}
 
 
 
+#home {
+  height: 700px;
+  padding-top: 270px;
+  text-align: center;
+  background:  #777 url(img/home-bg.jpg) no-repeat center bottom;
 
+}
 
+#home h1  {
+font: 75px/75px Arial, sans-serif;
+text-transform:uppercase;
+color: #fff;
+  margin-bottom: 40px
+
+}
+
+#home h3 {
+  font: 40px/40px Arial, sans-serif;
+  margin-bottom: 40px;
+  color: #fff;
+}
 
 
 .btn {
@@ -118,16 +168,16 @@ h5.title {
 }
 
 .commerce {
-  background: url(img/commerce.png) no-repeat
+  background: url('img/commerce.png') no-repeat center top;
 }
 
 
 .responsive {
-  background: url(img/responsive.png) no-repeat
+  background: url('img/responsive.png') no-repeat center top;
 }
 
 .security {
-  background: url(img/security.png) no-repeat
+  background: url('img/security.png') no-repeat center top;
 }
 
 
