--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-
-
-
-
-
-
-
-
-
-
 html {height: 100%;}
 body {
 height: 100%;
@@ -53,6 +43,7 @@ a, a:hover {text-decoration: none;}
 
 .logo {
   float: left;
+  margin-left: 50px;
 }
 
 
@@ -148,6 +139,8 @@ h5.title {
   color:#777;
 }
 
+.portfolio-wrap,
+.about-wrap,
 .services-wrap {
   padding-top: 70px;
 }
@@ -218,4 +211,61 @@ h5.title {
 
 .p-item-footer h5 .title {
   margin-bottom: 4px;
+}
+
+
+#about {
+  text-align: center;
+}
+
+.about-text {
+  width: 35%;
+}
+
+.about-img {
+  width: 30%;
+  }
+
+
+.about-img:after {
+  content:'';
+  display: block;
+  height: 94px;
+  width: 3px;
+  margin: 0 auto;
+background: #f1f1f1;
+}
+
+.about-img img, .about-link{
+  width: 177px;
+  height: 177px;
+  border-radius: 50%;
+  display: inline-block;
+  border: 7px solid #f1f1f1;
+}
+
+
+.about-text h5 span {
+  text-transform: uppercase;
+}
+
+
+.about-text h5 {
+  line-height: 24px;
+}
+
+.about-text p {
+  color: #777;
+  font-size: 16px;
+    line-height: 24px;
+}
+
+
+.about-link  {
+  padding-top: 35px;
+  color: #fff;
+  text-transform: uppercase;
+  font: bold 18px/30px Arial, sans-serif;
+background: #fed136;
+text-shadow: 0 1px rgba(0,0,0 ..3);
 }
