--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,7 @@ ol, ul {list-style: none;}
   padding: 0;
   outline: none;
 
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+
 }
 
 a, a:hover {text-decoration: none;}
@@ -262,10 +260,85 @@ background: #f1f1f1;
 
 
 .about-link  {
-  padding-top: 35px;
-  color: #fff;
+    color: #fff;
   text-transform: uppercase;
   font: bold 18px/30px Arial, sans-serif;
 background: #fed136;
-text-shadow: 0 1px rgba(0,0,0 ..3);
+text-shadow: 0 1px rgba(0,0,0 .3);
+}
+
+#item {
+  text-align: center;
+}
+
+.team-item {
+  float: left;
+  width: 33.33%;
+  margin: 0 10px;
+}
+
+.item-item img {
+  margin-bottom: 15px;
+  border: 7px solid #fff;
+}
+
+.team-info {
+  margin-top: 45px;
+}
+
+
+.cat {
+  font: 14px/14px Arial, sans-serif;
+  color:#777;
+}
+
+.social {margin-top: 10px;}
+
+.social a {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 3px solid #222;
+  border-radius: 50%;
+  margin-right: 0 3px;
+  background: url(css/img/social-sprite.png) no-repeat;
+}
+
+
+.social a .ic-tw {
+  background-position:0 0;
+}
+
+.social a .ic-tw:hover {
+  border: #00aced;
+  background-color: #00aced;
+    background-position:0 -40px;
+}
+
+.social a .ic-fb {
+  background-position:-40px 0;
+}
+.social a .ic-fb:hover {
+  border: #3b5998;
+  background-color: #3b5998;
+    background-position:-40px -40px;
+}
+
+
+.social a .ic-pn {
+  background-position:-80px 0;
+}
+.social a .ic-pn:hover {
+  border: #cb2028;
+  background-color: #cb2028;
+    background-position:-80px -40px;
+}
+
+.social a .ic-gl {
+  background-position:-120px 0;
+}
+.social a .ic-gl:hover {
+  border: #d95232;
+  background-color: #d95232;
+    background-position:-120px -40px;
 }
