--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,7 @@ background-color: #fff;
 
 ol, ul {list-style: none;}
 
-* {
-  margin: 0;
-  padding: 0;
-  outline: none;
 
-
-}
 
 a, a:hover {text-decoration: none;}
 
@@ -187,7 +181,10 @@ h5.title {
 }
 
 .services-wrap,
-.portfolio-wrap {
+.portfolio-wrap,
+.about-wrap,
+.team-wrap,
+#message {
   padding-top: 70px;
 }
 
@@ -274,7 +271,6 @@ text-shadow: 0 1px rgba(0,0,0 .3);
 .team-item {
   float: left;
   width: 33.33%;
-  margin: 0 10px;
 }
 
 .item-item img {
@@ -304,41 +300,113 @@ text-shadow: 0 1px rgba(0,0,0 .3);
   background: url(css/img/social-sprite.png) no-repeat;
 }
 
+.social a.black {background: #222;}
 
 .social a .ic-tw {
-  background-position:0 0;
-}
-
+background-position:0 0;}
 .social a .ic-tw:hover {
-  border: #00aced;
-  background-color: #00aced;
+border: #00aced;
+background-color: #00aced;
+background-position:0 -40px;
+}
+.social a..ic-tw .black {
     background-position:0 -40px;
 }
-
-.social a .ic-fb {
-  background-position:-40px 0;
-}
+.social a .ic-fb {background-position:-40px 0;}
 .social a .ic-fb:hover {
-  border: #3b5998;
-  background-color: #3b5998;
+border: #3b5998;
+background-color: #3b5998;
+background-position:-40px -40px;
+}
+.social a..ic-fb .black {
     background-position:-40px -40px;
 }
-
-
-.social a .ic-pn {
-  background-position:-80px 0;
-}
+.social a .ic-pn {background-position:-80px 0;}
 .social a .ic-pn:hover {
-  border: #cb2028;
-  background-color: #cb2028;
+border: #cb2028;
+background-color: #cb2028;
+background-position:-80px -40px;
+}
+.social a..ic-pn .black {
     background-position:-80px -40px;
 }
-
-.social a .ic-gl {
-  background-position:-120px 0;
-}
+.social a .ic-gl {background-position:-120px 0;}
 .social a .ic-gl:hover {
-  border: #d95232;
-  background-color: #d95232;
+border: #d95232;
+background-color: #d95232;
+background-position:-120px -40px;
+}
+.social a..ic-gl .black {
     background-position:-120px -40px;
+}
+
+#brand {
+  padding:  60px 0;
+  text-align: center;
+}
+
+#brand a {
+  display: inline-block;
+  margin-right:  40px;
+}
+
+#brand a:last-child {margin-right: 0;}
+
+#brand img {vertical-align: middle;}
+
+#contact {
+  text-align: center;
+  background: #222 url (css/img/maps-bg/png) no-repeat right bottom;
+
+}
+
+
+
+#contact h2.title {color:white;}
+
+
+
+
+#message .left,
+#message .right {width: 48%;}
+
+
+#message input [type="text"],
+#message textarea {
+background: #fff;
+border-radius: 4px;
+width: 100%;
+box-shadow: none;
+margin-bottom: 30px;
+padding: 15px 20px;
+color: #222;
+font: 14px/14px Arial, sans-serif;
+}
+
+
+#message input [type="text"] {
+  height: 50px;
+  border: 1px solid #ccc;
+}
+
+
+#message textarea {
+  border: none;
+  resize: none;
+  height: 210px;
+}
+
+#copyright {
+  padding: 25px 0;
+}
+
+#copyright p {
+  margin-top: 13px;
+  font: 14px Arial, sans-serif;
+  color: #555;
+}
+
+#copyright .social {
+  margin-top: 0;
+  margin-left: 365px;
 }
